--- a/fraud-detection-service.properties
+++ b/fraud-detection-service.properties
@@ -1,3 +1,3 @@
 
-fruad.service.message=Fruad dection is enables
-fruad.service.threshold=5
+fraud.service.message=Fruad dection is enables
+fraud.service.threshold=5
